# tmagent

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.sh
Tutorial/: README.md  function_calling.md  memory_manage_deep_wiki.md  progressive_disclosure.md
images/: create_banner.py  digital_essence.md
posts/: post1.txt
skills/: README.md
skills/calculator/: SKILL.md
skills/calculator/scripts/: calculate.py
skills/weather/: SKILL.md
skills/weather/scripts/: weather.py
src/tmagent/: __init__.py  agent.py  cli.py  llm.py  schema.py
src/tmagent/tools/: README.md  __init__.py  base.py  bash_tool.py  file_tools.py  skill_loader.py  skill_tool.py
tests/: __init__.py  test_function_call.py  test_memory.py  test_schema.py  test_skills.py  test_tools.py
