[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "tmagent"
version = "0.1.0"
description = "Minimal AI Agent with Function Calling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.57.4",
    "pydantic>=2.0.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
tmagent = "tmagent.cli:main"

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",                    # Verbose
    "--tb=short",           # Shorter traceback
    "--color=yes",          # Colored output
    "-ra",                  # Show test summary (all except passed)
    "--strict-markers",     # Strict marker checking
]

# Markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async (provided by pytest-asyncio)",
]

# Console output
console_output_style = "progress"
